force-app/main/default/objects/VCC_VISN__c/fields/VCC_CCC_Pharmacy_Lead__c.field-meta.xml
<CustomField>
    <fullName>VCC_CCC_Pharmacy_Lead__c</fullName>
    <description>Field for the CCC Pharmacy Lead name for the VISN</description>
    <encryptionScheme>None</encryptionScheme>
    <label>CCC Pharmacy Lead</label>
    <length>255</length>
    <type>Text</type>
</CustomField>