force-app/main/default/objects/VCC_VISN__c/fields/VCC_CCC_Scheduling_and_Admin_Lead__c.field-meta.xml
<CustomField>
    <fullName>VCC_CCC_Scheduling_and_Admin_Lead__c</fullName>
    <description>Field for the CCC Scheduling and Admin lead name for the VISN.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>CCC Scheduling and Admin Lead</label>
    <length>255</length>
    <type>Text</type>
</CustomField>