force-app/main/default/objects/VCC_VISN__c/fields/VCC_CCC_VCV_Lead__c.field-meta.xml
<CustomField>
    <fullName>VCC_CCC_VCV_Lead__c</fullName>
    <description>Field for the CCC VCV Lead of the VISN</description>
    <encryptionScheme>None</encryptionScheme>
    <label>CCC VCV Lead</label>
    <length>255</length>
    <type>Text</type>
</CustomField>