force-app/main/default/objects/VCC_VISN__c/fields/VCC_Implementation_Back_Up__c.field-meta.xml
<CustomField>
    <fullName>VCC_Implementation_Back_Up__c</fullName>
    <description>Field for the Implementation Back-Up name for the VISN.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Implementation Back-Up</label>
    <length>255</length>
    <type>Text</type>
</CustomField>