force-app/main/default/objects/VCC_VISN__c/fields/VCC_Implementation_Primary__c.field-meta.xml
<CustomField>
    <fullName>VCC_Implementation_Primary__c</fullName>
    <description>Field for the name of the Implementation primary for the VISN.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Implementation Primary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>