force-app/main/default/objects/VCC_VISN__c/validationRules/Prevent_Duplicate_VISN_Records.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Duplicate_VISN_Records</fullName>
    <active>true</active>
    <description>Prevents duplicate VISN records by checking the VISN Name doesn&apos;t already exist.</description>
    <errorConditionFormula>AND(VLOOKUP($ObjectType.VCC_VISN__c.Fields.Name, $ObjectType.VCC_VISN__c.Fields.Name, Name) = Name, OR(ISNEW(), ISCHANGED(Name)))</errorConditionFormula>
    <errorMessage>This VISN already exists.</errorMessage>
</ValidationRule>